--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "4.6.0",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   },
   "overrides": {
     "svgo": "3.0.2"
