--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@mui/material": "5.12.3",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
@@ -58,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "ajv": "^7.2.4",
     "eslint": "8.39.0",
     "eslint-config-prettier": "8.8.0",
@@ -66,8 +69,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "4.6.0",
-    "prettier": "2.8.8",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "prettier": "2.8.8"
   },
   "overrides": {
     "svgo": "3.0.2"
