--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "material-dashboard-2-react",
+  "name": "nck-dashboard",
   "version": "2.2.0",
   "private": true,
-  "author": "Creative Tim",
+  "author": "mHealth Kenya",
   "license": "See license in https://www.creative-tim.com/license",
   "description": "React version of Material Dashboard 2 by Creative Tim",
   "bugs": {
@@ -18,6 +18,7 @@
     "@emotion/styled": "11.10.8",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
+    "axios": "^1.7.9",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "file-saver": "^2.0.5",
