--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nck-dashboard",
+  "name": "kenum-dashboard",
   "version": "2.2.0",
   "private": true,
   "author": "mHealth Kenya",
   "license": "See license in https://www.creative-tim.com/license",
-  "description": "React version of Material Dashboard 2 by Creative Tim",
+  "description": "KeNuM Dashboard",
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
   },
